--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article id="home" class="card">
           <header>
             <h2>Madang Dulu, Yuk!</h2>
-            <img src="assets/img/home.jpg" class="image">
+            <img src="assets/img/home.jpg" class="image" alt="gambar nasi ayam bakar">
           </header>
           <p>
             <span>"</span>Warung Nasi Padang ini, telah berdiri sejak tahun 2013 dengan rasa masakan yang khas dibuat
@@ -102,7 +102,7 @@
             <tr>
               <td>Nasi + Ayam Balado</td>
               <td>Perkedel</td>
-              <td>Rp. 2.000,00</td>
+              <td>Rp.2.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Ikan Kembung Goreng</td>
@@ -122,37 +122,37 @@
             <tr>
               <td>Nasi + Ikan Tongkol Asam Padeh</td>
               <td>Lauk Ayam saja</td>
-              <td>Rp. 7.000,00</td>
+              <td>Rp.7.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Ikan Tongkol Balado</td>
               <td>Ikan Kembung</td>
-              <td>Rp. 7.000,00</td>
+              <td>Rp.7.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Gulai Ikan Tongkol</td>
               <td>Ikan Lele</td>
-              <td>Rp. 7.000,00</td>
+              <td>Rp.7.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Telor Dadar</td>
               <td>Daging Cincang</td>
-              <td>Rp. 5.000,00</td>
+              <td>Rp.5.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Ikan Lele</td>
               <td>Gulai Nangka</td>
-              <td>Rp. 5.000,00</td>
+              <td>Rp.5.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Daging Cincang</td>
               <td>Sambel</td>
-              <td>Rp. 5.000,00</td>
+              <td>Rp.5.000,00</td>
             </tr>
             <tr>
               <td>Nasi + Ikan Bawal Bakar</td>
               <td>Nasi</td>
-              <td>Rp. 5.000,00</td>
+              <td>Rp.5.000,00</td>
             </tr>
           </tbody>
         </table>
@@ -184,6 +184,7 @@
           </tr>
         </table>
       </article>
+    </div>
   </main>
 
   <footer>
